--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
 <body>
   <nav class="nav-bar">
-    <div><img class="nav-logo" src="./assets/images/logo.png" alt="logo"/></div>
+    <div><img class="nav-logo" src="./assets/images/logo.png" alt="logo" /></div>
     <div class="nav-link-group">
       <a href="#home" class="nav-link">Home</a>
       <a href="#meet-out-prodcuts" class="nav-link">Toner</a>
@@ -105,32 +105,32 @@
       <h1 class="gallery-title">GALLERY</h1>
       <div class="gallery-grid">
         <div class="gallery-grid-item">
-          <img 
+          <img
             src="https://thumbs.dreamstime.com/b/default-avatar-photo-placeholder-profile-icon-eps-file-easy-to-edit-default-avatar-photo-placeholder-profile-icon-124557887.jpg"
             alt="gallery image" />
         </div>
         <div class="gallery-grid-item">
-          <img 
+          <img
             src="https://thumbs.dreamstime.com/b/default-avatar-photo-placeholder-profile-icon-eps-file-easy-to-edit-default-avatar-photo-placeholder-profile-icon-124557887.jpg"
             alt="gallery image" />
         </div>
         <div class="gallery-grid-item">
-          <img 
+          <img
             src="https://thumbs.dreamstime.com/b/default-avatar-photo-placeholder-profile-icon-eps-file-easy-to-edit-default-avatar-photo-placeholder-profile-icon-124557887.jpg"
             alt="gallery image" />
         </div>
         <div class="gallery-grid-item">
-          <img 
+          <img
             src="https://thumbs.dreamstime.com/b/default-avatar-photo-placeholder-profile-icon-eps-file-easy-to-edit-default-avatar-photo-placeholder-profile-icon-124557887.jpg"
             alt="gallery image" />
         </div>
         <div class="gallery-grid-item">
-          <img 
+          <img
             src="https://thumbs.dreamstime.com/b/default-avatar-photo-placeholder-profile-icon-eps-file-easy-to-edit-default-avatar-photo-placeholder-profile-icon-124557887.jpg"
             alt="gallery image" />
         </div>
         <div class="gallery-grid-item">
-          <img 
+          <img
             src="https://thumbs.dreamstime.com/b/default-avatar-photo-placeholder-profile-icon-eps-file-easy-to-edit-default-avatar-photo-placeholder-profile-icon-124557887.jpg"
             alt="gallery image" />
         </div>
@@ -143,29 +143,39 @@
 
   <section class="about-sec" id="about">
     <h1>ABOUT</h1>
-    <p> 
-      It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. 
-      The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as opposed to using 'Content here, 
-      content here', making it look like readable English. Many desktop publishing packages and web page editors now use Lorem Ipsum as 
-      their default model text, and a search for 'lorem ipsum' will uncover many web sites still in their infancy. Various versions have 
+    <p>
+      It is a long established fact that a reader will be distracted by the readable content of a page when looking at
+      its layout.
+      The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as opposed to using
+      'Content here,
+      content here', making it look like readable English. Many desktop publishing packages and web page editors now use
+      Lorem Ipsum as
+      their default model text, and a search for 'lorem ipsum' will uncover many web sites still in their infancy.
+      Various versions have
       evolved over the years, sometimes by accident, sometimes on purpose (injected humour and the like).
     </p>
   </section>
 
   <section class="map-sec" id="map">
     <h1>MAP</h1>
-    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3607.9623754134254!2d55.30786551501102!3d25.271851083861492!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x0!2zMjXCsDE2JzE4LjciTiA1NcKwMTgnMzYuMiJF!5e0!3m2!1sen!2sin!4v1617426525367!5m2!1sen!2sin" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
-    <p> 
-      It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. 
-      The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as opposed to using 'Content here, 
-      content here', making it look like readable English. Many desktop publishing packages and web page editors now use Lorem Ipsum as 
-      their default model text, and a search for 'lorem ipsum' will uncover many web sites still in their infancy. Various versions have 
+    <iframe
+      src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3607.9623754134254!2d55.30786551501102!3d25.271851083861492!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x0!2zMjXCsDE2JzE4LjciTiA1NcKwMTgnMzYuMiJF!5e0!3m2!1sen!2sin!4v1617426525367!5m2!1sen!2sin"
+      width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+    <p>
+      It is a long established fact that a reader will be distracted by the readable content of a page when looking at
+      its layout.
+      The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as opposed to using
+      'Content here,
+      content here', making it look like readable English. Many desktop publishing packages and web page editors now use
+      Lorem Ipsum as
+      their default model text, and a search for 'lorem ipsum' will uncover many web sites still in their infancy.
+      Various versions have
       evolved over the years, sometimes by accident, sometimes on purpose (injected humour and the like).
     </p>
   </section>
   <section class="footer-sec" id="contact">
     <div class="footer-inner">
-      <div class="footer-info"> 
+      <div class="footer-info">
         <img src="./assets/images/logo.png" />
         <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
       </div>
